--- a/index.html
+++ b/index.html
@@ -47,26 +47,50 @@
   </section>
 
   <section class="feedback">
-    <h2>What our users say</h2>
-    <p>Hear directly from our focused customers</p>
-    <div class="review-grid">
-      <div class="review-box">
-        <div class="stars">★★★★★</div>
-        <p>Loved by Designers</p>
-        <div><img src="reviewer.jpg" alt="Reviewer" /> <strong>Jane D.</strong></div>
-      </div>
-      <div class="review-box">
-        <div class="stars">★★★★★</div>
-        <p>Loved by Designers</p>
-        <div><img src="reviewer.jpg" alt="Reviewer" /> <strong>John A.</strong></div>
-      </div>
-      <div class="review-box">
-        <div class="stars">★★★★★</div>
-        <p>Loved by Designers</p>
-        <div><img src="reviewer.jpg" alt="Reviewer" /> <strong>Lisa B.</strong></div>
+  <h2>What our users say</h2>
+  <p>Hear directly from our focused customers</p>
+  <div class="review-grid">
+    <div class="review-box">
+      <div class="stars">★★★★★</div>
+      <h4>Loved by Designers</h4>
+      <p class="review-text">This template instantly leveled up our presence.” – Studio Vertex</p>
+      <div class="reviewer">
+        <img src="avatar.png" alt="Reviewer" />
+        <div>
+          <strong>Reviewer name</strong><br />
+          <small>Date</small>
+        </div>
       </div>
     </div>
-  </section>
+
+    <div class="review-box">
+      <div class="stars">★★★★★</div>
+      <h4>Loved by Designers</h4>
+      <p class="review-text">This template instantly leveled up our presence.” – Studio Vertex</p>
+      <div class="reviewer">
+        <img src="avatar.png" alt="Reviewer" />
+        <div>
+          <strong>Reviewer name</strong><br />
+          <small>Date</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="review-box">
+      <div class="stars">★★★★★</div>
+      <h4>Loved by Designers</h4>
+      <p class="review-text">This template instantly leveled up our presence.” – Studio Vertex</p>
+      <div class="reviewer">
+        <img src="avatar.png" alt="Reviewer" />
+        <div>
+          <strong>Reviewer name</strong><br />
+          <small>Date</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <section class="focus">
     <h2>Ready to focus better</h2>
