updated html and css
let's get in touch section completed

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="reviewer">
         <img src="avatar.png" alt="Reviewer" />
         <div>
-          <strong>Reviewer name</strong><br />
-          <small>Date</small>
+          <strong>Sadia Afrin</strong><br />
+          <small>30/02/24</small>
         </div>
       </div>
     </div>
@@ -70,8 +70,8 @@
       <div class="reviewer">
         <img src="avatar.png" alt="Reviewer" />
         <div>
-          <strong>Reviewer name</strong><br />
-          <small>Date</small>
+          <strong>Sadi Chowdhury</strong><br />
+          <small>05/08/24</small>
         </div>
       </div>
     </div>
@@ -83,8 +83,8 @@
       <div class="reviewer">
         <img src="avatar.png" alt="Reviewer" />
         <div>
-          <strong>Reviewer name</strong><br />
-          <small>Date</small>
+          <strong>Aurisha Mehek</strong><br />
+          <small>05/05/25</small>
         </div>
       </div>
     </div>
@@ -99,14 +99,26 @@
   </section>
 
   <section class="contact">
-    <h2>Let’s Get in Touch</h2>
-    <div class="contact-form">
-      <input type="text" placeholder="Name" />
-      <input type="email" placeholder="Email" />
-      <textarea placeholder="Write your message..."></textarea>
-      <button>Get in Touch</button>
+  <div class="contact-wrapper">
+    <div class="contact-heading">
+      <h2>Let’s Get in<br>Touch</h2>
     </div>
-  </section>
+    <form class="contact-form">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="example@email.com" />
+
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="full name" />
+
+      <label for="message">Message</label>
+      <textarea id="message" rows="5" placeholder="write your message...."></textarea>
+
+      <button type="submit">Get in Touch</button>
+    </form>
+  </div>
+</section>
+
+
 
   <footer>
     <h2>LOGO</h2>
