--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web UI</title>
+  <title>TINTIN</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <nav>
-      <h2>LOGO</h2>
+      <div class="logo-with-image">
+  <img src="tintin.jpg" alt="Cat Logo" />
+  <h2>TINTIN</h2>
+</div>
       <button>Sign Up</button>
     </nav>
     <div class="banner">
@@ -93,10 +96,14 @@
 
 
   <section class="focus">
+  <div class="focus-content">
     <h2>Ready to focus better</h2>
-    <button>🚀 Start Using Now</button>
-    <img src="your-focus-image.jpg" alt="Focus Preview" />
-  </section>
+    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+    <button>Get Started Free</button>
+    <img src="wc-big.png" alt="Focus Preview" />
+  </div>
+</section>
+
 
   <section class="contact">
   <div class="contact-wrapper">
@@ -121,14 +128,17 @@
 
 
   <footer>
-    <h2>LOGO</h2>
-    <p>Bringing clarity to your digital workspace.</p>
-    <div class="footer-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">How it works</a>
-      <a href="#">Services</a>
-    </div>
-  </footer>
+  <h2 class="footer-logo">TINTIN</h2>
+  <p class="footer-subtitle">
+    Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+  </p>
+  <div class="footer-links">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">How it Works</a>
+    <a href="#">Services</a>
+  </div>
+</footer>
+
 </body>
 </html>
